# dsh-sdk-platform-py

./: .envrc  .gitignore  .null-ls_512174_README.md  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  flake.nix  justfile  non-nixDockerfile  pyproject.toml
.direnv/: flake-profile-1-link  flake-profile-2-link
dsh-entrypoint/: entrypoint.sh  setup_ssl_dsh.sh
example_services/consume/: main.py
example_services/datagenerator/: main.py
examples/python-boilerplate/: channels.py
examples/python-boilerplate/union-types-and-channels/: main.py  packet.py
examples/python-patterns/: channels.py
kafka_proxy/python/: kafka.py
poc_example_services/produce/: main.py
src/: main.py
src/dsh/: entrypoint.py
src/dsh/kafka/: dsh_kafka.py
src/dsh/ssl/: __init__.py
